# CodeEditor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doc.md  Doc_for_user.md  LICENSE  README.md  chatwindow.cpp  chatwindow.h  codeplaintextedit.cpp  codeplaintextedit.h  completionwidget (copy 1).h  completionwidget.cpp  completionwidget.h  cpphighlighter.cpp  cpphighlighter.h  cursorwidget.cpp  cursorwidget.h  customtooltip.h  diagnostictooltip.cpp  diagnostictooltip.h  documentmodel.cpp  documentmodel.h  largefileloader.cpp  largefileloader.h  linehighlightwidget.cpp  linehighlightwidget.h  linenumberarea.cpp  linenumberarea.h  lspmanager.cpp  lspmanager.h  lspsettingsdialog.cpp  lspsettingsdialog.h  main.cpp  mainwindowcodeeditor.cpp  mainwindowcodeeditor.h  mainwindowcodeeditor.ui  resources.qrc  roundedtextedit.cpp  roundedtextedit.h  (+11 more)
CollaborativeCodeEditor/: CMakeLists.txt
styles/: Dark.colorscheme  Light.colorscheme  dark.qss  darkcompletionwidget.qss  light.qss
